@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020 Abex
+ * Copyright (c) 2021 Abex
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -23,10 +23,47 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 repositories {
+	maven {
+		url = 'https://repo.runelite.net'
+	}
 	mavenCentral()
-	gradlePluginPortal()
 }
 
+configurations {
+	runelite {
+		resolutionStrategy {
+			// we don't run any code from this configuration
+			disableDependencyVerification()
+		}
+	}
+}
+
+def runeLiteVersion = file("../../runelite.version").text.trim()
+
 dependencies {
-	implementation "com.github.johnrengelman.shadow:com.github.johnrengelman.shadow.gradle.plugin:6.1.0"
+	implementation "org.slf4j:slf4j-simple:1.7.10"
+	implementation "com.google.code.findbugs:jsr305:3.0.2"
+	implementation "com.google.guava:guava:23.2-jre"
+	implementation "org.ow2.asm:asm:9.3"
+	implementation "com.google.code.gson:gson:2.8.5"
+
+	def lombok = "org.projectlombok:lombok:1.18.4"
+	compileOnly lombok
+	annotationProcessor lombok
+	testCompileOnly lombok
+	testAnnotationProcessor lombok
+
+	runelite group: 'net.runelite', name: 'client', version: runeLiteVersion
+	runelite group: 'net.runelite', name: 'jshell', version: runeLiteVersion
+	runelite lombok
+}
+
+compileJava.options.compilerArgs += ["--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"]
+
+def apiFilePath = new File(project.buildDir, "api")
+
+task api(type: JavaExec) {
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = "net.runelite.pluginhub.apirecorder.ClassRecorder"
+	args = [apiFilePath] + configurations.runelite.files
 }
